# svgPlot

./: .gitignore  CMakeLists.txt  LineSpec.cpp  LineSpec.h  README.md  axis.cpp  axis.h  line.cpp  line.h  main.cpp  polyline.cpp  polyline.h  svg.cpp  svg.h  svgDrawable.h  text.cpp  text.h  xAxis.h  yAxis.h
